# mart_api_1

./: README.md
inventory_service/: pyproject.toml
inventory_service/app/: main.py
notification_service/: pyproject.toml
notification_service/app/: main.py
order_service/: pyproject.toml
order_service/app/: main.py
payment_service/: pyproject.toml
payment_service/app/: main.py
product_service/: pyproject.toml
product_service/app/: main.py
user_service/: pyproject.toml
user_service/app/: main.py
