[tool.poetry]
name = "inventory-service"
version = "0.1.0"
description = ""
authors = ["Rimsha123dev <153190159+Rimsha123dev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlmodel = "^0.0.22"
fastapi = "^0.115.0"
psycopg2 = "^2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
